[gd_scene load_steps=24 format=3 uid="uid://8ntpxl3kj03j"]

[ext_resource type="Script" uid="uid://bsa2gqsf4n8t5" path="res://script/enemy.gd" id="1_1j3c0"]
[ext_resource type="Texture2D" uid="uid://bplhgbsrcmpkd" path="res://texture/enemy_shoot-Sheet.png" id="2_cqyba"]
[ext_resource type="PackedScene" uid="uid://ca84klelguglu" path="res://scene/state_machine.tscn" id="3_tn3r5"]
[ext_resource type="Script" uid="uid://8ih7wlplidj5" path="res://script/state_chase.gd" id="4_4uflw"]
[ext_resource type="Script" uid="uid://dkuyuvcex0tys" path="res://script/state_shoot.gd" id="5_joacj"]
[ext_resource type="PackedScene" uid="uid://cbsj7ovehe12k" path="res://scene/enemy_bullet.tscn" id="6_4d4x8"]
[ext_resource type="Script" uid="uid://5voq86b0plfn" path="res://script/stats.gd" id="7_vdlhy"]
[ext_resource type="PackedScene" uid="uid://dpxcbgjomudin" path="res://scene/status_controller.tscn" id="8_7qp8j"]
[ext_resource type="Script" uid="uid://b21n7garto5js" path="res://script/drop_component.gd" id="9_xoysa"]
[ext_resource type="PackedScene" uid="uid://dj302ciut8ur" path="res://scene/soft_collision.tscn" id="10_buy3b"]
[ext_resource type="PackedScene" uid="uid://dkybpqqnsy5j4" path="res://scene/death_component.tscn" id="11_7th78"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erxfx"]
atlas = ExtResource("2_cqyba")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fmoi"]
atlas = ExtResource("2_cqyba")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qmn"]
atlas = ExtResource("2_cqyba")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6jhe"]
atlas = ExtResource("2_cqyba")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rg2h"]
atlas = ExtResource("2_cqyba")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5na0d"]
atlas = ExtResource("2_cqyba")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvcjm"]
atlas = ExtResource("2_cqyba")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke52s"]
atlas = ExtResource("2_cqyba")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl65c"]
atlas = ExtResource("2_cqyba")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6e4f5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erxfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fmoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6jhe")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rg2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5na0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvcjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke52s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl65c")
}],
"loop": true,
"name": &"swimming",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mj8ag"]
radius = 17.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fmoi"]
radius = 18.0
height = 40.0

[node name="EnemyRanged" type="CharacterBody2D" node_paths=PackedStringArray("stats") groups=["enemy"]]
collision_mask = 0
script = ExtResource("1_1j3c0")
stats = NodePath("Stats")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6e4f5")
animation = &"swimming"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_mj8ag")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_tn3r5")]
initial_state = NodePath("StateChase")

[node name="StateChase" type="Node" parent="StateMachine"]
script = ExtResource("4_4uflw")
stop_distance = 300.0
next_state_on_stop = "StateShoot"

[node name="StateShoot" type="Node" parent="StateMachine"]
script = ExtResource("5_joacj")
projectile_scene = ExtResource("6_4d4x8")
resume_chase_distance = 300.0

[node name="Stats" type="Node" parent="."]
script = ExtResource("7_vdlhy")
base_max_health = 20.0
base_defense = 5.0
base_attack = 7.0
base_move_speed = 50.0
base_projectile_speed = 195.0
base_fire_rate = 0.85
metadata/_custom_type_script = "uid://5voq86b0plfn"

[node name="EnemyHurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2(0, 2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_0fmoi")
debug_color = Color(0.9447193, 0.12248061, 0.50797135, 0.41960785)

[node name="StatusController" parent="." node_paths=PackedStringArray("stats", "icon_container") instance=ExtResource("8_7qp8j")]
stats = NodePath("../Stats")
icon_container = NodePath("../Control/HBoxContainer")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -13.0
offset_top = -55.0
offset_right = 27.0
offset_bottom = -15.0

[node name="DropComponent" type="Node" parent="."]
script = ExtResource("9_xoysa")
metadata/_custom_type_script = "uid://b21n7garto5js"

[node name="SoftCollision" parent="." instance=ExtResource("10_buy3b")]

[node name="DeathComponent" parent="." node_paths=PackedStringArray("sprite_to_effect") instance=ExtResource("11_7th78")]
sprite_to_effect = NodePath("../AnimatedSprite2D")
